crates/scorecard/tests/trybuild/gate_runs_red_without_detail_must_fail.stderr
error[E0061]: this function takes 4 arguments but 3 arguments were supplied
  --> tests/trybuild/gate_runs_red_without_detail_must_fail.rs:13:16
   |
13 |     let _row = Row::gate_runs_red(common, Vec::new(), "0/12 gates failing".to_string());
   |                ^^^^^^^^^^^^^^^^^^------------------------------------------------------ argument #4 of type `String` is missing
   |
note: associated function defined here
  --> src/lib.rs
   |
   |     pub fn gate_runs_red(
   |            ^^^^^^^^^^^^^
help: provide the argument
   |
13 |     let _row = Row::gate_runs_red(common, Vec::new(), "0/12 gates failing".to_string(), /* String */);
   |                                                                                       ++++++++++++++
